--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 9x9 -->
-    <!--  
    	<string name="app_name">9x9.tv</string>
 	<string name="app_icon">@drawable/tt_icon_new</string>       	
     <string name="white_label">portal</string>
@@ -14,8 +13,7 @@
     <string name="signin_logo">tvlogo</string>    
     <string name="signin_bg">bgnew</string>      
     <string name="set_banner">banner_9x9</string>     
-	<string name="fb_app_id">361253423962738</string>
-	-->
+	<string name="fb_app_id">1429057570658015</string>
 	 			
 	<!-- Joey Graceffa -->
     <!--  
@@ -117,7 +115,7 @@
     <string name="signin_bg">freddiew_bg_open</string>
     <string name="set_banner">freddiew_banner01</string>
     <string name="fb_app_id">761677907197600</string>
-      -->
+    -->
          
     <!-- Spinnin' Records -->
     <!--   
@@ -167,7 +165,7 @@
     <string name="signin_logo">history_logo_signin</string>
     <string name="signin_bg">history_bg_open</string>
     <string name="set_banner">history_banner01</string>
-    <string name="fb_app_id">361253423962738</string>
+    <string name="fb_app_id">1423211814590720</string>
  	-->
        
     <!-- NBA -->
@@ -184,7 +182,7 @@
     <string name="signin_logo">nba_logo_signin</string>
     <string name="signin_bg">nba_bg_open</string>
     <string name="set_banner">nba_banner01</string>
-    <string name="fb_app_id">277020789128327</string>
+    <string name="fb_app_id">361253423962738</string>
     -->
 
     <!-- Smosh -->
@@ -273,7 +271,7 @@
     -->
     
     <!-- EchoMusic -->
-    <!-- 
+    <!--   
     <string name="app_name">音樂圖書館</string>
     <string name="app_icon">@drawable/launch_logo_echomusic</string>
     <string name="white_label">echomusic</string>
@@ -287,7 +285,7 @@
     <string name="signin_bg">bg_open_echomusic</string>     
     <string name="set_banner">banner_echomusic</string>   
 	<string name="fb_app_id">212239432317755</string>
-     -->
+    -->
          
     <!-- string name="app_name">華視</string --><!-- cts original -->
     <!-- cts festival -->  
@@ -304,7 +302,7 @@
     <string name="signin_logo">logo_cts</string>        
     <string name="signin_bg">bg_open_cts</string> 
     <string name="set_banner">banner_cts</string>           
-	<string name="fb_app_id">1429057570658015</string>              
+	<string name="fb_app_id">1110847978946712</string>              
     --> 
 	
     <!-- thenewslens -->
@@ -322,8 +320,8 @@
     <string name="signin_bg">bg_open_thenewslens</string>
     <string name="set_banner">banner_thenewslens</string>            
 	<string name="fb_app_id">436354623134686</string>
-    -->
-
+	-->
+	
     <!-- goodtv -->
     <!--   
     <string name="app_name">GOODTV</string>
@@ -374,7 +372,7 @@
     <string name="signin_bg">bg_open_fcu</string>
     <string name="set_banner">banner01_fcu</string>      
 	<string name="fb_app_id">180687745468145</string>
-     -->  
+    -->  
 	
     <!-- Tzu Chi -->
     <!--    
@@ -393,7 +391,7 @@
 	-->
 	
 	<!-- superstar -->
-    <!--    
+    <!--   
     <string name="app_name">網路大明星</string>
     <string name="app_icon">@drawable/launch_logo_superstar</string>    
     <string name="white_label">superstar</string>     
@@ -407,10 +405,10 @@
     <string name="signin_bg">bg_open_superstar</string>
     <string name="set_banner">banner_superstar</string>            
 	<string name="fb_app_id">422631834537839</string>
- 	--> 
+    -->
     
     <!-- musicvideo -->
-    <!--    
+    <!--   
     <string name="app_name">MV不解釋</string>
     <string name="app_icon">@drawable/musicvideo_launch_logo</string>    
     <string name="white_label">musicvideo</string>     
@@ -424,10 +422,10 @@
     <string name="signin_bg">musicvideo_bg_open</string>
     <string name="set_banner">musicvideo_banner01</string>            
 	<string name="fb_app_id">463854980410020</string>
- 	--> 
+ 	-->  
     
     <!-- newsflipr -->
-    <!--    
+    <!--      
     <string name="app_name">喇新聞 FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_newsflipr</string>    
     <string name="white_label">news</string>     
@@ -441,7 +439,7 @@
     <string name="signin_bg">bg_open_newsflipr</string>
     <string name="set_banner">banner_newsflipr</string>            
 	<string name="fb_app_id">756691711022525</string>    
-	 --> 	
+	-->	
 
     <!-- ktsf26 -->
     <!--  
@@ -491,7 +489,7 @@
     <string name="signin_logo">demo_logo_signin</string>
     <string name="signin_bg">demo_bg_open</string>
     <string name="set_banner">demo_banner01</string>
-    <string name="fb_app_id">361253423962738</string>
+    <string name="fb_app_id">292201190939231</string>
 	-->	
 
     <!-- Demo -->
@@ -508,11 +506,11 @@
     <string name="signin_logo">tvlogo</string>    
     <string name="signin_bg">bgnew</string>      
     <string name="set_banner">banner_9x9</string>     
-	<string name="fb_app_id">361253423962738</string>
+	<string name="fb_app_id">292201190939231</string>
 	-->
 			
     <!-- Magazine -->
-    <!-- 
+    <!--  
     <string name="app_name">癮雜誌</string>
     <string name="app_icon">@drawable/magazine_launch_logo</string>
     <string name="white_label">magazine</string>
@@ -526,10 +524,10 @@
     <string name="signin_bg">magazine_bg_open</string>
     <string name="set_banner">magazine_banner01</string>
     <string name="fb_app_id">535963343168975</string>
-    --> 
+    -->
     
     <!-- test -->
-    <!-- 
+    <!--   
     <string name="app_name">test FLIPr</string>
     <string name="app_icon">@drawable/launch_logo_test</string>    
     <string name="white_label">test</string>     
@@ -543,11 +541,10 @@
     <string name="signin_bg">bg_open_test</string>
     <string name="set_banner">banner_test</string>            
 	<string name="fb_app_id">390805357729394</string>
-	 -->  
-     
+    -->
     
     <!-- Gametube -->
-    <!--   
+    <!--    
     <string name="app_name">GameTube</string>
     <string name="app_icon">@drawable/gametube_launch_logo</string>
     <string name="white_label">gametube</string>
@@ -615,6 +612,7 @@
     -->
     
     <!-- Demo1 -->
+    <!-- 
    	<string name="app_name">Demo1</string>
 	<string name="app_icon">@drawable/tt_icon_new</string>       	
 	<string name="white_label">demo1</string>
@@ -628,7 +626,110 @@
     <string name="signin_bg">bgnew</string>      
     <string name="set_banner">banner_9x9</string>     
 	<string name="fb_app_id">361253423962738</string>
+    -->
+      
+    <!-- Demo2 -->
+   	<!-- 
+   	<string name="app_name">Demo2</string>
+	<string name="app_icon">@drawable/tt_icon_new</string>       	
+	<string name="white_label">demo2</string>
+    <string name="mso">demo2</string>
+    <string name="default_region">en</string>
+    <string name="logo">tvlogo</string>
+    <string name="splash_background">bgnew</string>
+    <string name="splash_foreground">splash_generic_logo</string>        
+    <string name="splash_slogan">Empowering Cloud TV</string>     
+    <string name="signin_logo">tvlogo</string>    
+    <string name="signin_bg">bgnew</string>      
+    <string name="set_banner">banner_9x9</string>     
+	<string name="fb_app_id">361253423962738</string>
+	-->
+
+    <!-- YourApp2 -->
+   	<!-- 
+    <string name="app_name">Your FLIPr App2</string>
+    <string name="app_icon">@drawable/yourapp_launch_logo</string>
+    <string name="white_label">yourapp2</string>
+    <string name="mso">yourapp2</string>
+    <string name="default_region">en</string>
+    <string name="logo">yourapp_logo</string>
+    <string name="splash_background">yourapp_bg_open</string>
+    <string name="splash_foreground">yourapp_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">yourapp_logo_signin</string>
+    <string name="signin_bg">yourapp_bg_open</string>
+    <string name="set_banner">yourapp_banner</string>
+    <string name="fb_app_id">361253423962738</string>
+	-->
 	
+    <!-- dingdingtv -->
+    <!-- 
+    <string name="app_name">DingDingTV</string>
+    <string name="app_icon">@drawable/ddtv_launch_logo</string>    
+    <string name="white_label">dingdingtv</string>     
+    <string name="mso">dingdingtv</string>
+    <string name="default_region">en</string>               
+    <string name="logo">ddtv_logo</string>
+    <string name="splash_background">ddtv_bg_open</string>
+    <string name="splash_foreground">ddtv_open_logo</string>    
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">ddtv_logo_signin</string>        
+    <string name="signin_bg">ddtv_bg_open</string>
+    <string name="set_banner">ddtv_banner01</string>
+    <string name="fb_app_id">361253423962738</string>
+	-->
+    
+	<!-- Sundance -->
+    <!-- 
+   	<string name="app_name">日舞電影 FLIPr</string>
+	<string name="app_icon">@drawable/sundance_launch_logo</string>
+    <string name="white_label">sundance</string>
+    <string name="mso">sundance</string>
+    <string name="default_region">zh</string>
+    <string name="logo">sundance_logo</string>
+    <string name="splash_background">sundance_bg_open</string>
+    <string name="splash_foreground">sundance_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">sundance_logo_signin</string>
+    <string name="signin_bg">sundance_bg_open</string>
+    <string name="set_banner">sundance_banner</string>
+    <string name="fb_app_id">249416341849120</string>
+    -->
+     
+    <!-- Iconcerts -->
+    <!-- 
+   	<string name="app_name">Iconcerts FLIPr</string>
+	<string name="app_icon">@drawable/iconcerts_launch_logo</string>
+    <string name="white_label">iconcerts</string>
+    <string name="mso">iconcerts</string>
+    <string name="default_region">zh</string>
+    <string name="logo">iconcerts_logo</string>
+    <string name="splash_background">iconcerts_bg_open</string>
+    <string name="splash_foreground">iconcerts_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">iconcerts_logo_signin</string>
+    <string name="signin_bg">iconcerts_bg_open</string>
+    <string name="set_banner">iconcerts_banner</string>
+    <string name="fb_app_id">293143897532949</string>
+    -->
+    
+    <!-- CW -->
+    <!-- 
+    <string name="app_name">天下影音</string>
+    <string name="app_icon">@drawable/cw_launch_logo</string>    
+    <string name="white_label">cw</string>     
+    <string name="mso">cw</string>
+    <string name="default_region">zh</string>               
+    <string name="logo">cw_logo</string>
+    <string name="splash_background">cw_bg_open</string>
+    <string name="splash_foreground">cw_open_logo</string>    
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">cw_logo_signin</string>        
+    <string name="signin_bg">cw_bg_open</string>
+    <string name="set_banner">cw_banner</string>
+    <string name="fb_app_id">1424661534476944</string>
+    -->
+
     
     <bool name="uses_chromecast">true</bool>
     
