--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -2,17 +2,17 @@
 <resources>
     <!-- 9x9 -->
    	<string name="app_name">9x9.tv</string>
-	<string name="app_icon">@drawable/nine_launch_logo</string>       	
+	<string name="app_icon">@drawable/tt_icon_new</string>       	
     <string name="white_label">portal</string>
     <string name="mso">9x9</string>
     <string name="default_region">en</string>
-    <string name="logo">9x9_logo</string>
-    <string name="splash_background">nine_bg_open</string>
+    <string name="logo">tvlogo</string>
+    <string name="splash_background">bgnew</string>
     <string name="splash_foreground">splash_generic_logo</string>        
     <string name="splash_slogan">Empowering Cloud TV</string>     
-    <string name="signin_logo">nine_logo</string>    
-    <string name="signin_bg">nine_bg_open</string>      
-    <string name="set_banner">nine_banner</string>     
+    <string name="signin_logo">tvlogo</string>    
+    <string name="signin_bg">bgnew</string>      
+    <string name="set_banner">banner_9x9</string>     
 	<string name="fb_app_id">1429057570658015</string>
 	  			
 	<!-- Joey Graceffa -->
@@ -976,4 +976,10 @@
     <string name="supports_chromecast">(支援 Chromecast)</string>
     <string name="skip_this_step">略過此步驟</string>
     <string name="welcome">歡迎！</string>
+    <string name="edit_account_change_password">Edit Account (Change Password)</string>
+    <string name="change_password">Change Password</string>
+    <string name="current">Current</string>
+    <string name="confirm">Confirm</string>
+	<string name="terms_of_service">Terms of Service</string>     
+	<string name="test">Test</string>
 </resources>
