--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -984,4 +984,8 @@
 	<string name="log_in">Log in</string>
 	<string name="log_in_with_email">Log in with Email</string>
 	<string name="or_log_in_with_email">Or log in with Email</string>
+	<string name="skip_ads_1">You can skip ads</string>
+	<string name="skip_ads_2">after</string>
+	<string name="skip_ads_3">seconds</string>
+	<string name="skip_ad">Skip AD</string>
 </resources>
