--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -988,4 +988,5 @@
 	<string name="skip_ads_2">after</string>
 	<string name="skip_ads_3">seconds</string>
 	<string name="skip_ad">Skip AD</string>
+	<string name="social">Social</string>
 </resources>
