--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,8 +4,8 @@
    	<string name="app_name">9x9.tv</string>
 	<string name="app_icon">@drawable/nine_launch_logo</string>       	
     <string name="white_label">portal</string>
-    <string name="mso">cts</string>
-    <string name="default_region">zh</string>
+    <string name="mso">9x9</string>
+    <string name="default_region">en</string>
     <string name="logo">nine_logo</string>
     <string name="splash_background">nine_bg_open</string>
     <string name="splash_foreground">splash_generic_logo</string>        
