--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -989,4 +989,13 @@
 	<string name="skip_ads_3">seconds</string>
 	<string name="skip_ad">Skip AD</string>
 	<string name="social">Social</string>
+	<string name="feedback">Feedback</string>
+	<string name="contact_us">Contact us</string>
+	<string name="bug">Bug</string>
+	<string name="suggestion">Suggestion</string>
+	<string name="feedback_category">Category</string>
+	<string name="feedback_offer">Offer your feedback</string>
+	<string name="feedback_your_email">Your Email:</string>
+	<string name="feedback_your_message">Your message:</string>
+	<string name="feedback_thanks">Thank you for your feedback!</string>
 </resources>
