--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -267,4 +267,5 @@
 	<string name="feedback_your_message">Your message:</string>
 	<string name="feedback_thanks">Thank you for your feedback!</string>	
 	<string name="social_feed">Social Feed</string>	
+	<string name="real_channel_source">Episode originally from</string>	
 </resources>
