--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -243,29 +243,29 @@
     <string name="supports_chromecast">(支援 Chromecast)</string>
     <string name="skip_this_step">略過此步驟</string>
     <string name="welcome">歡迎！</string>
-    <string name="edit_account_change_password">Edit Account (Change Password)</string>
-    <string name="change_password">Change Password</string>
-    <string name="current">Current</string>
-    <string name="confirm">Confirm</string>
-	<string name="terms_of_service">Terms of Service</string>     
-	<string name="test">Test</string>
-	<string name="log_in">Log in</string>	
-	<string name="log_in_with_email">Log in with Email</string>	
-	<string name="or_log_in_with_email">Or log in with Email</string>
+    <string name="edit_account_change_password">編輯帳號 (更改密碼)</string>
+    <string name="change_password">更改密碼</string>
+    <string name="current">目前的密碼</string>
+    <string name="confirm">確認新密碼</string>
+	<string name="terms_of_service">使用條款</string>     
+	<string name="test">測試</string>
+	<string name="log_in">登入</string>	
+	<string name="log_in_with_email">Email 帳號登入</string>	
+	<string name="or_log_in_with_email">或 Email 帳號登入</string>
 	<string name="skip_ads_1">這則廣告將在</string>
 	<string name="skip_ads_2"></string>
 	<string name="skip_ads_3">秒後跳過</string>
 	<string name="skip_ad">跳過廣告</string>		
 	<string name="social">Social</string>	
-	<string name="feedback">Feedback</string>
-	<string name="contact_us">Contact us</string>
-	<string name="bug">Bug</string>
-	<string name="suggestion">Suggestion</string>
-	<string name="feedback_category">Category</string>
-	<string name="feedback_offer">Offer your feedback</string>
-	<string name="feedback_your_email">Your Email:</string>
-	<string name="feedback_your_message">Your message:</string>
-	<string name="feedback_thanks">Thank you for your feedback!</string>	
+	<string name="feedback">意見回饋</string>
+	<string name="contact_us">聯絡我們</string>
+	<string name="bug">問題回報</string>
+	<string name="suggestion">建議</string>
+	<string name="feedback_category">類別</string>
+	<string name="feedback_offer">請提供您的寶貴意見</string>
+	<string name="feedback_your_email">您的 Email:</string>
+	<string name="feedback_your_message">您的留言:</string>
+	<string name="feedback_thanks">謝謝您的意見回饋!</string>	
 	<string name="social_feed">Social Feed</string>	
-	<string name="real_channel_source">Episode originally from</string>	
+	<string name="real_channel_source">這個劇集出自</string>	
 </resources>
