--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -268,4 +268,5 @@
 	<string name="feedback_thanks">謝謝您的意見回饋!</string>	
 	<string name="social_feed">Social Feed</string>	
 	<string name="real_channel_source">這個劇集出自</string>	
+	<string name="log_in_sign_up">登入 / 註冊</string>
 </resources>
