--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -276,4 +276,5 @@
 	<string name="three_in_a_row">Turn &#8220;Skip Watched Episodes&#8221; on/off in <b><u>Settings</u></b></string>	
 	<string name="home_store_hint">Tap to expand the Menu. Then visit the Store for more great content.</string>	
 	<string name="playback_subscribe_hint">Like this program? Tap to follow it!</string>	
+	<string name="chat">Chat</string>	
 </resources>
