--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -279,4 +279,4 @@
 	<string name="home_store_hint">Tap to expand the Menu. Then visit the Store for more great content.</string>
 	<string name="playback_subscribe_hint">Like this program? Tap to follow it!</string>
 	<string name="chat">Chat</string>
-</resources>
+	<string name="to_join_this_chat">To join this chat, please</string></resources>
